# basin-provider

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  cockroach-logs.yaml  compose.yaml  rustfmt.toml
.github/workflows/: deploy.yml  format.yml  foundry.yml  lint.yml  test.yml
.sqlx/: query-081ba48851e1530c2ad328de866b95691a12edc796eee6dd14dd2fe99ce79528.json  query-108cadb2db4f811815ba7242631cce8400bb2c6a3a4f0fe3189e9016aa19a8db.json  query-3db947b54da7c91f666ff14dc5803eca0e9509dd5b8d19a5a5b76d1cf307196a.json  query-6f2844e0e91e2d90b7221faa8d13b39a8a648983497bb9f1948ab4d9c27f54fe.json  query-c04c6f8f623415b739551b91b891c9f214eadeeada30b6454e38433455354224.json  query-c0ef8ad0fa66de594dde97668b9c25f9750c6b3ed63c520d963cdc6e199a772a.json  query-e113742f3b3574ffe5e28ffe3ea77157e45f82cab8c265eecc85032ee66f419d.json  query-e75215d90fda583a98ba72d03067972f7706ac34043cd283adcc9809085cb882.json  query-f33e098537b5b6fe502b6249322837e58d1d30a2cae9add376491f0c7707e440.json  query-f895e77a7d11ec7c85d847542365a854a5ddcc2ac57d43d655a4b62cc997f331.json
evm/data_index/: README.md  remappings.txt
evm/data_index/script/: Counter.s.sol  DataIndex.s.sol  DataIndexOne.s.sol
evm/data_index/src/: DataIndex.sol  DataIndexOne.sol  DataIndexTwo.sol
evm/data_index/test/: DataIndex.t.sol  DataIndexOne.t.sol  DataIndexTwo.t.sol
k8s/: Makefile  cert-manager.yaml  issuer-lets-encrypt-production.yaml
k8s/base/: exporter.yaml  ingress-controller.yaml  ingress-nginx.yaml  ingress.yaml  kustomization.yaml  nginx.tmpl  worker.yaml
k8s/staging/: configBasinExporter.env  configBasinWorker.env  configTcpServices.env  ingress-controller-patch.json  ingress-nginx-patch.yaml  ingress-patch.yaml  kustomization.yaml
lib/client/: Cargo.toml
lib/client/src/: client.rs  lib.rs  main.rs
lib/common/: Cargo.toml
lib/common/migrations/: 20231108200529_timestamp.sql  20231115184124_cache.sql  20231206102117_signature.sql
lib/common/src/: db.rs  ecmh.rs  errors.rs  http.rs  lib.rs
lib/dealer/: Cargo.toml
lib/evm/: Cargo.toml  build.rs
lib/evm/contracts/: BasinStorage.json
lib/evm/src/: client.rs  contract.rs  errors.rs  evm.rs  lib.rs  testing.rs
lib/evm/src/testing/: mock.rs
lib/exporter/: Cargo.toml
lib/exporter/src/: errors.rs  exporter.rs  lib.rs  main.rs
lib/protocol/: Cargo.toml  build.rs
lib/protocol/schema/: definitions.capnp  provider.capnp
lib/protocol/src/: lib.rs  schema.rs
lib/protocol/src/schema/: definitions_capnp.rs  provider_capnp.rs  stream_capnp.rs
lib/status_checker/: Cargo.toml
lib/status_checker/src/: db.rs  lib.rs  main.rs  status_checker.rs
lib/status_checker/tests/: integration.rs
lib/worker/: Cargo.toml  env.example
lib/worker/.cargo/: config
lib/worker/.sqlx/: query-04c3e75b932341683eb91d9f75667e96ed4fdfb025b4c23fd8d1166013f3c90d.json  query-2b8d840a51e4744a7c30fefe2806d27c556b5b0b2e6a1e47429d34e25ab90436.json  query-5fd8508be58a7ce720360169b42a93fc24cc4923764f7b738b171cf8dc7f33ae.json  query-692fb2a63af24b15fae3bec6f69e228e38ed7b61a56d188a44d96bf33797be1f.json  query-a748e1a9d24232a405100214f3b71e8bbd4cab31ec5aae99fbd1faf911a77e07.json
lib/worker/migrations/: 20230822153954_publications.sql  20230913084902_jobs.sql  20230915185022_namespaces.sql  20230916200656_jobs.sql  20231101162419_timestamp.sql
lib/worker/src/: crypto.rs  db.rs  exporter.rs  gcs.rs  handlers.rs  helpers.rs  lib.rs  main.rs  publications.rs  rpc.rs  sql.rs  startup.rs  utils.rs  web3storage.rs
lib/worker/src/crypto/: crypto.rs  utils.rs
lib/worker/src/db/: errors.rs  publications.rs  setup.rs
lib/worker/src/domain/: cache_path.rs  cid.rs  event.rs  mod.rs  record_info.rs  vault.rs
lib/worker/src/routes/: health_check.rs  mod.rs  vaults.rs
lib/worker/tests/: integration.rs
lib/worker/tests/api/: helpers.rs  http.rs  main.rs
