[workspace]
members = ["lib/evm", "lib/protocol", "lib/worker"]
resolver = "2"

[workspace.package]
authors = ["Textile <contact@textile.io"]
description = "The Tableland Basin Provider."
edition = "2021"
homepage = "https://github.com/tablelandnetwork/basin-provider"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/tablelandnetwork/basin-provider"
version = "0.1.0"
