[workspace]
members = ["lib/common", "lib/evm", "lib/protocol", "lib/worker"]
resolver = "2"

[workspace.package]
authors = ["Textile <contact@textile.io"]
description = "Tableland Basin: Continuously publish data from your database to the Tableland network."
edition = "2021"
homepage = "https://github.com/tablelandnetwork/basin-provider"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/tablelandnetwork/basin-provider"
version = "0.1.0"

[workspace.dependencies]
anvil = "0.0.1"
array-bytes = "6.1.0"
async-trait = "0.1.73"
backon = "0.4.1"
base64 = "0.21.4"
blockless-car = "0.1.5"
bytes = "1.0.1"
capnp = "0.18.1"
capnp-rpc = "0.18.0"
capnpc = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
cid = "0.11.0"
clap = { version = "4.4.4", features = ["derive", "env"] }
curve25519-dalek = { version = "4.1.1", features = [
    "digest",
    "group",
    "serde",
] }
elliptic-curve = { version = "0.13.6", features = ["serde", "hash2curve"] }
ethers = { git = "https://github.com/gakonst/ethers-rs.git" }
futures = "0.3.28"
google-cloud-auth = "0.13.0"
google-cloud-default = { version = "0.4.0", features = ["storage"] }
google-cloud-storage = "0.15.0"
hex = "0.4.3"
hyper = { version = "0.14", features = [
    "stream",
    "server",
    "http1",
    "http2",
    "tcp",
    "client",
] }
jemallocator = "0.5.4"
log = "0.4.1"
multibase = "0.9"
once_cell = "1.18.0"
openssl = { version = "0.10.57", features = ["vendored"] }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["stream"] }
secp256k1 = { version = "0.27.0", features = ["recovery"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
] }
stderrlog = "0.5.4"
thiserror = "1.0.48"
tiny-keccak = "2.0.2"
tokio = { version = "1.32.0", features = ["macros", "net", "rt"] }
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
url = "2.4.1"
w3s = { git = "https://github.com/avichalp/w3s-rs", branch = "main" }
warp = "0.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
