[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "basin_client"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
basin_protocol = { path = "../protocol" }
capnp = "0.17.2"
capnp-rpc = "0.17.0"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
