[package]
authors = { workspace = true }
description = "Common lib for Tableland Basin"
edition = { workspace = true }
name = "basin_common"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
capnp = { workspace = true }
thiserror = { workspace = true }
warp = { workspace = true }
curve25519-dalek = { workspace = true }
elliptic-curve = { workspace = true }
sha2 = { workspace = true }
