[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "basin_dealer"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
