[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "basin_evm"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait = { workspace = true }
capnp = { workspace = true }
ethers = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
ethers = { workspace = true }
