[package]
authors = { workspace = true }
description = "EVM bindings for Tableland Basin"
edition = { workspace = true }
name = "basin_evm"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait = { workspace = true }
basin_common = { path = "../common" }
ethers = { workspace = true }

[build-dependencies]
ethers = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
