[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
name = "basin_protocol"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
capnp = "0.18.1"

[build-dependencies]
capnpc = "0.18.0"
