[package]
authors = { workspace = true }
description = "Filecoin status checker daemon"
edition = { workspace = true }
name = "status_checker"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basin_common = { path = "../common" }
basin_evm = { path = "../evm" }
basin_worker = { path = "../worker" }
clap = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
multibase = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["chrono"] }
stderrlog = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-cron-scheduler = { workspace = true }
