[package]
authors = { workspace = true }
description = "Ingests publications to Basin"
edition = { workspace = true }
name = "basin_worker"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anvil = "0.0.1"
array-bytes = "6.1.0"
backon = "0.4.1"
base64 = "0.21.4"
basin_evm = { path = "../evm" }
basin_protocol = { path = "../protocol" }
capnp = "0.18.1"
capnp-rpc = "0.18.0"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive", "env"] }
ethers = { git = "https://github.com/avichalp/ethers-rs.git", branch = "avichalp/calibrationnet", features = ["abigen", "rustls", "ws"] }
futures = "0.3.28"
google-cloud-auth = "0.12.0"
google-cloud-default = { version = "0.4.0", features = ["storage"] }
google-cloud-storage = "0.13.1"
hex = "0.4.3"
log = "0.4.1"
once_cell = "1.18.0"
secp256k1 = { version = "0.27.0", features = ["recovery"] }
serde = "1.0.183"
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-native-tls"] }
stderrlog = "0.5.4"
thiserror = "1.0.47"
tiny-keccak = "2.0.2"
tokio = { version = "1.32.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
url = "2.4.1"
warp = "0.3"

[dev-dependencies]
basin_exporter = { path = "../exporter" }
