[package]
authors = { workspace = true }
description = "Ingests publications to Basin"
edition = { workspace = true }
name = "basin_worker"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anvil = { workspace = true }
array-bytes = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
basin_evm = { path = "../evm" }
basin_protocol = { path = "../protocol" }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
google-cloud-auth = { workspace = true }
google-cloud-default = { workspace = true }
google-cloud-storage = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
stderrlog = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
basin_exporter = { path = "../exporter" }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.4"
