[package]
authors = { workspace = true }
description = "Ingest daemon for Tableland Basin"
edition = { workspace = true }
name = "basin_worker"
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
anvil = { workspace = true }
array-bytes = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
base64 = { workspace = true }
basin_common = { path = "../common" }
basin_evm = { path = "../evm" }
basin_protocol = { path = "../protocol" }
blockless-car = { workspace = true }
bytes = { workspace = true }
capnp = { workspace = true }
capnp-rpc = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }
clap = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
google-cloud-auth = { workspace = true }
google-cloud-default = { workspace = true }
google-cloud-storage = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
multibase = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
stderrlog = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
w3s = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
wiremock = "0.5"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.4"
